CI: start using tox and publish python packages into registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,24 @@
-before_script:
-  - pip install virtualenv
-  - virtualenv -p "$(which python)" /tmp/test
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+  CI_TOX_ENVS: "-e py39,py310"
+  CI_TOX_EXTRA: "--backend openwrt --backend mock"
+  CI_TOX_IMAGE: registry.nic.cz/turris/foris-ci/python3
+  IMAGE: registry.nic.cz/turris/foris-ci/python3
+  DEBIAN_FRONTEND: noninteractive
 
 stages:
+  - lint
   - test
+  - build
+  - publish
 
-.run_script: &run_script
-  script:
+include:
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/base.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/linters.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/tox.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/build_and_publish.yml"
+
+test::python:
+  before_script:
     - apt-get update
-    - apt-get install -y collectd iproute2
-
-    - source /tmp/test/bin/activate
-
-    - pip install .
-
-    - python setup.py test --addopts="--backend openwrt --backend mock --message-bus mqtt"
-
-test_python3:
-  image: registry.nic.cz/turris/foris-ci/python3
-  stage: test
-  <<: *run_script
+    - apt-get -y install --no-install-recommends collectd
